name:                  cogent-doc
version:               2.9.0.0
author:                Liam O'Connor <liamoc@cse.unsw.edu.au>
                       Zilin Chen <zilin.chen@data61.csiro.au>
maintainer:            Liam O'Connor <liamoc@cse.unsw.edu.au>
                       Zilin Chen <zilin.chen@data61.csiro.au>
homepage:              https://ts.data61.csiro.au/projects/TS/cogent.pml
bug-reports:           https://github.com/NICTA/cogent/issues
synopsis:              Generating pretty documentation for Cogent the compiler.
category:              Development
cabal-version:         >= 2.0
build-type:            Custom

data-files:
    static/jquery.min.js
    static/style.css
    static/toc.min.js
    static/logo.png

source-repository head
  type: git
  location: https://github.com/NICTA/cogent/

custom-setup
  setup-depends:
                 base                            >= 4.7        && < 5
               , Cabal                           == 2.0.*
               , cabal-doctest                   == 1.0.*
               , directory                       >= 1.2        && < 2
               , filepath                        >= 1.4        && < 2
               , process                         >= 1.2        && < 2

library
  build-depends:
                 base                            >= 4.7        && < 5
               , cogent-language
               , ansi-terminal                   >= 0.6
               , ansi-wl-pprint                  >= 0.6
               , blaze-html                      >= 0.8.1
               , blaze-markup                    >= 0.7
               , containers                      >= 0.5
               , data-default                    >= 0.5
               , directory                       >= 1.2
               , filepath                        >= 1.4
               , lens                            >= 4.7        && < 5
               , mtl                             >= 2.2.1
               , pandoc                          >= 1.19
               , pandoc-types                    >= 1.16
               , parsec                          >= 3.1      
               , shakespeare                     >= 2.0
               , text                            >= 0.11

  default-language:
                  Haskell2010

  default-extensions:
                    CPP

  ghc-options:
             -fno-warn-name-shadowing
             -fno-warn-missing-signatures
             -fno-warn-unused-matches
             -O2
             -optP-Wno-nonportable-include-path


  if impl(ghc >= 8.0)
    ghc-options:
               -fno-warn-redundant-constraints

  hs-source-dirs:
                src

  exposed-modules:
                   Cogent.DocGent
                 , Version_cogent

  other-modules:
                   Paths_cogent_doc

  autogen-modules:
                   Paths_cogent_doc
                 , Version_cogent
