name:                  cogent-language
version:               2.9.0.0
author:                Liam O'Connor <liamoc@cse.unsw.edu.au>
                       Zilin Chen <zilin.chen@data61.csiro.au>
maintainer:            Liam O'Connor <liamoc@cse.unsw.edu.au>
                       Zilin Chen <zilin.chen@data61.csiro.au>
homepage:              https://ts.data61.csiro.au/projects/TS/cogent.pml
bug-reports:           https://github.com/NICTA/cogent/issues
category:              Development
cabal-version:         >= 2.0
build-type:            Custom
description:           Definition of the surface syntax for Cogent.

source-repository head
  type: git
  location: https://github.com/NICTA/cogent/

custom-setup
  setup-depends:
                 base                            >= 4.7        && < 5
               , Cabal                           == 2.0.*
               , cabal-doctest                   == 1.0.*
               , directory                       >= 1.2        && < 2
               , filepath                        >= 1.4        && < 2
               , process                         >= 1.2        && < 2

library
  build-depends:
                 base                            >= 4.7        && < 5
               , ansi-wl-pprint                  >= 0.6        && < 0.7
               , containers                      >= 0.5        && < 0.6
               , directory                       >= 1.3        && < 1.4
               , filepath                        >= 1.4        && < 1.5
               , groups                          >= 0.4        && < 0.5
               , graph-wrapper                   >= 0.2        && < 0.3
               , lens                            >= 4.7        && < 5
               , mtl                             >= 2.2        && < 2.3
               , sbv                             >= 7.0        && < 8
               , parsec                          >= 3.1        && < 3.2
               , pointless-haskell               >= 0.0.9      && < 1
               , transformers                    >= 0.5        && < 0.6

  default-language:
                  Haskell2010

  default-extensions:
                    CPP

  ghc-options:
             -fno-warn-name-shadowing
             -fno-warn-missing-signatures
             -fno-warn-unused-matches
             -O2
             -optP-Wno-nonportable-include-path

  if impl(ghc >= 8.0)
    ghc-options:
               -fno-warn-redundant-constraints

  hs-source-dirs:
                src

  exposed-modules:
                   Cogent.Common.Syntax
                 , Cogent.Common.Types
                 , Cogent.Common.Repr

                 , Cogent.Compiler

                 , Cogent.Context

                 , Cogent.Surface

                 , Cogent.TypeCheck
                 , Cogent.TypeCheck.Assignment
                 , Cogent.TypeCheck.Base
                 , Cogent.TypeCheck.Generator
                 , Cogent.TypeCheck.GoalSet
                 , Cogent.TypeCheck.Post
                 , Cogent.TypeCheck.Solver
                 , Cogent.TypeCheck.Subst
                 , Cogent.TypeCheck.Util

                 , Cogent.Reorganizer

                 , Cogent.PrettyPrint

                 , Cogent.Util

                 , Paths_cogent_language
                 , Version_cogent

  autogen-modules:
                   Paths_cogent_language
                 , Version_cogent
